fixed issue with rating being cutoff

--- a/client/src/Components/Product/Product.scss
+++ b/client/src/Components/Product/Product.scss
@@ -59,6 +59,7 @@
 }
 
 .prodRate{
+  margin-bottom: 20px;
   width:100px;
 }
 
